# Singleload

./: .gitignore  Cargo.toml  Containerfile  LICENSE.MD  README.MD  build.sh
examples/bash/: hello.sh  security-test.sh  system-info.sh
examples/go/: hello.go  prime.go
examples/javascript/: async.js  hello.js  resource-test.js
examples/php/: error.php  hello.php  json.php
examples/python/: error.py  fibonacci.py  hello.py
src/: config.rs  container.rs  errors.rs  executor.rs  lib.rs  main.rs  security.rs  types.rs
tests/: integration_test.rs
