[package]
name = "singleload"
version = "0.1.0"
edition = "2021"
authors = ["Singleload Contributors"]
license = "MIT"
repository = "https://github.com/Singleload/Singleload"
description = "Secure, isolated script execution using rootless Podman containers"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
podman-api = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tempfile = "3.12"
nix = { version = "0.29", features = ["process", "resource"] }
bytes = "1.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true